--- a/app/src/main/res/layout/fragment_entry_list.xml
+++ b/app/src/main/res/layout/fragment_entry_list.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/light_gray"
     tools:context=".ui.fragments.EntryListFragment">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -32,8 +33,16 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/abl_app_bar_layout"
+        app:layout_constraintBottom_toTopOf="@id/rc_entry_list"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:id="@+id/rc_book_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        />
+    <androidx.recyclerview.widget.RecyclerView
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rc_book_list"
         android:id="@+id/rc_entry_list"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_0"
