添加笔记本功能-笔记本功能基本完成-差批量词条移动逻辑

--- a/app/src/main/res/layout/entry_item.xml
+++ b/app/src/main/res/layout/entry_item.xml
@@ -30,19 +30,35 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
-
-
-            <ImageButton
-                android:id="@+id/iv_entry_delete"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+            <TextView
+                android:textSize="@dimen/sp_15"
                 android:layout_margin="@dimen/dp_10"
-                android:background="@drawable/ic_delete"
-                android:contentDescription="@string/entry_delete"
-                android:padding="@dimen/dp_10"
+                android:id="@+id/tv_entry_update_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/dp_5"
+                android:text="@string/entry_update_time"
+                app:layout_constraintBaseline_toBaselineOf="@id/tv_entry_name"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toRightOf="@id/tv_entry_name" />
+
+
+            <CheckBox
+                android:minWidth="@dimen/dp_0"
+                android:minHeight="@dimen/dp_0"
+                android:visibility="visible"
+                android:checked="false"
+                android:id="@+id/cb_entry_select"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/dp_10"
+                android:contentDescription="@string/entry_delete"
+                android:padding="@dimen/dp_0"
                 app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
