--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="light_gray">#F5F5F5</color>
-    <color name="little_gray">#DCDCDC</color>
+    <color name="middle_gray">#EBEBEB</color>
+    <color name="little_gray">#E1E1E1</color>
 </resources>
